<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
   >
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBE6"
    tools:context=".Manager"
        android:layout_gravity="center">


    <ImageButton
        android:id="@+id/removeVendorIB"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginEnd="8dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/bestsellers"
        android:scaleType="fitCenter"
        android:src="@drawable/remove_estate"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/remove_estate"
        tools:srcCompat="@drawable/remove_estate" />

    <ImageButton
        android:id="@+id/addVendorButton"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="64dp"
        android:background="#FBFBF9"
        android:contentDescription="@string/add_remove_vendors"
        android:scaleType="fitCenter"
        android:src="@drawable/vendor_add"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vendorCheckInfo"
        app:layout_constraintTop_toBottomOf="@+id/vendorCheckInfo"
        tools:srcCompat="@drawable/vendor_add" />

        <ImageButton
            android:id="@+id/vendorCheckInfo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/vendor_management"
            android:scaleType="fitCenter"
            android:src="@drawable/vendor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/removeVendorButton"
            tools:srcCompat="@drawable/vendor_512_1_" />

        <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/removeVendorButton"
        style="@style/ManagerTabButton"
        android:layout_marginTop="2dp"
        android:text="REMOVE A VENDOR"
        app:layout_constraintEnd_toStartOf="@+id/vendor_check_Button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/removeVendorIB"
        app:layout_constraintTop_toBottomOf="@+id/removeVendorIB" />

        <Button
            android:id="@+id/vendor_check_Button"
            style="@style/ManagerTabButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:text="@string/check_vendors_info"
            app:layout_constraintBottom_toTopOf="@+id/addVendorButton"
            app:layout_constraintEnd_toEndOf="@+id/vendorCheckInfo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/vendorCheckInfo"
            app:layout_constraintTop_toBottomOf="@+id/vendorCheckInfo"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/addRemoveButton"
            style="@style/ManagerTabButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="Add a vendor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/addVendorButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/vendorCheckInfo"
            app:layout_constraintTop_toBottomOf="@+id/addVendorButton"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>